--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -2,16 +2,17 @@ root = true
 
 [*]
 end_of_line = lf
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
 
 [*.java]
-indent_style = space
 indent_size = 2
 continuation_indent_size = 4
 
 [*.xml]
-indent_style = space
 indent_size = 4
 
+[*.feature]
+indent_size = 2
